<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.shree.materialdesign8.Main4Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_profile_image_background11">

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:id="@+id/patient1"
                android:background="@drawable/ripple"
                android:layout_weight="0.41"
                android:weightSum="1">

                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="left|top"
                    android:id="@+id/img1"
                    android:src="@drawable/doctor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slide_3_title"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/slide_title2"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"

                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:id="@+id/patient2"
                android:layout_below="@+id/patient1"
                android:background="@drawable/ripple3"
                android:weightSum="1">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="left|center_horizontal"
                    android:src="@drawable/pathalogy"
                    android:layout_marginTop="30dp"

                    android:id="@+id/imageView5"
                    android:layout_marginRight="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/slide_2_title"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/slide_title2"
                    android:textStyle="bold"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:id="@+id/patient3"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/patient4"
                android:background="@drawable/ripple4">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="right|center_horizontal"
                    android:id="@+id/img3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/qa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/slide_5_title"
                    android:textColor="#ffffff"
                    android:gravity="right"
                    android:textSize="@dimen/slide_title2"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:id="@+id/patient4"
                android:layout_alignParentRight="true"
                android:background="@drawable/ripple1">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right|top"
                    android:id="@+id/img5"
                    android:src="@drawable/heart"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/slide_1_title"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textSize="@dimen/slide_title2"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:id="@+id/patient5"
                android:layout_below="@id/patient2"
                android:background="@drawable/ripple5">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|left"
                    android:id="@+id/img8"
                    android:layout_marginTop="75dp"

                    android:src="@drawable/emergency"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="35dp"
                    android:text="@string/slide_6_title"
                    android:textColor="#ffffff"





                    android:textSize="@dimen/slide_title2"
                    android:textStyle="bold"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="220dp"
                    android:orientation="vertical"
                    android:id="@+id/patient6"
                    android:layout_below="@id/patient3"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ripple6">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"

                        android:id="@+id/img9"
                        android:layout_gravity="bottom|right"

                        android:layout_marginTop="75dp"
                        android:src="@drawable/phonee"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slide_7_title"
                    android:textColor="#ffffff"
                    android:gravity="center_horizontal"


                    android:layout_marginRight="15dp"
                    android:textSize="@dimen/slide_title2"
                       android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="right|bottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:id="@+id/patient7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="154dp"
                android:background="@drawable/ripple6">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:id="@+id/img10"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/job"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="Job"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:id="@+id/patient8"
                android:layout_below="@+id/patient7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="@drawable/ripple5">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:id="@+id/img11"
                    android:layout_gravity="center"
                    android:src="@drawable/medicine"/>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Medicine"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
